# commotiond

./: .gitignore  CMakeLists.txt  README.md
doxygen/: Doxyfile.in  doxyfile
files/: commotiond.conf
files/profiles.d/: defaultAP  defaultClient  defaultMesh  defaultPlug  defaultSec  example  test
openwrt/etc/config/: commotion  commotiond
openwrt/etc/init.d/: commotiond
openwrt/etc/uci-defaults/: commotiond
openwrt/lib/functions/: commotion.sh
openwrt/lib/netifd/: commotion.dhcp.script
openwrt/lib/netifd/proto/: commotion.sh
openwrt/usr/share/commotion/patches/: mac80211.sh.patch
plugins/: CMakeLists.txt
plugins/demo/: CMakeLists.txt  README.md  demo.c  demo.h
plugins/olsrd/: olsrd.c  olsrd.h
plugins/serval-dna/: CMakeLists.txt  README.md  client.c  commands.c  commands.h  config.h.in  crypto.c  crypto.h  keyring.c  keyring.h  mdp_client.c  mdp_client.h  net.c  net.h  olsr_mdp.c  olsr_mdp.h  sas_request.c  sas_request.h  serval-client.c  serval-config.h.in  serval-dna.c  serval-dna.h
plugins/servald/: CMakeLists.txt  client.c  client.h  crypto.c  crypto.h  servald.c  servald.h
src/: CMakeLists.txt  client.c  cmd.c  cmd.h  colua.c  colua.lqw  command.c  command.h  commotion.c  commotion.h  config.h  config.h.in  core.c  core.h  daemon.c  db.c  db.h  debug.h  id.c  id.h  iface.c  iface.h  list.c  list.h  loop.c  loop.h  luawrap.c  msg.c  msg.h  obj.c  obj.h  olsrd.c  olsrd.h  plugin.c  plugin.h  process.c  process.h  profile.c  profile.h  socket.c  (+7 more)
test/: CMakeLists.txt
tests/: CMakeLists.txt  list.cpp  loop.cpp  msg.cpp  plugin.cpp  profile.cpp  scheduler.cpp  socket.cpp  test.cpp  tree-next.cpp  tree.cpp
tests/demo/: CMakeLists.txt  demo.c
