SET(PLUGIN_NAME serval-dna)
SET(PLUGINSRC serval-dna.c crypto.c)
SET(CLIENT_NAME serval-client)
SET(CLIENTSRC serval-client.c crypto.c)
SET(SAS_NAME serval-sas)
SET(SASSRC sas_request.c mdp_client.c net.c)
ADD_DEFINITIONS(-DHAVE_BCOPY -DHAVE_BZERO -DHAVE_BCMP -DHAVE_ARPA_INET_H -DHAVE_POLL_H)

INCLUDE_DIRECTORIES(${COMMON_INCLUDES})
INCLUDE_DIRECTORIES("/usr/include/serval")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)

ADD_LIBRARY(${PLUGIN_NAME} SHARED ${PLUGINSRC})
ADD_EXECUTABLE(${CLIENT_NAME} ${CLIENTSRC})
ADD_LIBRARY(${SAS_NAME} SHARED ${SASSRC})

TARGET_LINK_LIBRARIES(${PLUGIN_NAME} commotion)
TARGET_LINK_LIBRARIES(${CLIENT_NAME} servald commotion)
TARGET_LINK_LIBRARIES(${SAS_NAME} commotion)

SET_TARGET_PROPERTIES(${PLUGIN_NAME} PROPERTIES OUTPUT_NAME commotion_${PLUGIN_NAME} LINK_FLAGS -Wl,--export-dynamic)
SET_TARGET_PROPERTIES(${SAS_NAME} PROPERTIES OUTPUT_NAME commotion_${SAS_NAME})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION lib/commotion/plugins)
INSTALL(TARGETS ${CLIENT_NAME} RUNTIME DESTINATION bin)
INSTALL(TARGETS ${SAS_NAME} LIBRARY DESTINATION lib)