INCLUDE (CheckFunctionExists) 
CHECK_FUNCTION_EXISTS (bcopy HAVE_BCOPY)
CHECK_FUNCTION_EXISTS (bzero HAVE_BZERO)
CHECK_FUNCTION_EXISTS (bcmp HAVE_BCMP)
CHECK_FUNCTION_EXISTS (lseek64 HAVE_LSEEK64)
INCLUDE (CheckIncludeFiles) 
CHECK_INCLUDE_FILES (arpa/inet.h HAVE_ARPA_INET_H)
CHECK_INCLUDE_FILES (poll.h HAVE_POLL_H)
CHECK_INCLUDE_FILES (sys/socket.h HAVE_SYS_SOCKET_H)
CHECK_INCLUDE_FILES (netinet/in.h HAVE_NETINET_IN_H)

CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/plugins/serval-dna/config.h.in ${CMAKE_SOURCE_DIR}/plugins/serval-dna/config.h)

SET(PLUGIN_NAME serval-dna)
SET(PLUGINSRC serval-dna.c crypto.c)
SET(CLIENT_NAME serval-client)
SET(CLIENTSRC serval-client.c crypto.c)
SET(SAS_NAME serval-sas)
SET(SASSRC sas_request.c)

INCLUDE_DIRECTORIES(${COMMON_INCLUDES})
INCLUDE_DIRECTORIES("/usr/include/serval")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)

ADD_LIBRARY(${PLUGIN_NAME} SHARED ${PLUGINSRC})
ADD_EXECUTABLE(${CLIENT_NAME} ${CLIENTSRC})
ADD_LIBRARY(${SAS_NAME} SHARED ${SASSRC})

TARGET_LINK_LIBRARIES(${PLUGIN_NAME} serval commotion)
TARGET_LINK_LIBRARIES(${CLIENT_NAME} serval commotion)
TARGET_LINK_LIBRARIES(${SAS_NAME} mdpclient commotion)

SET_TARGET_PROPERTIES(${PLUGIN_NAME} PROPERTIES OUTPUT_NAME commotion_${PLUGIN_NAME})
SET_TARGET_PROPERTIES(${SAS_NAME} PROPERTIES OUTPUT_NAME commotion_${SAS_NAME})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION lib/commotion/plugins)
INSTALL(TARGETS ${CLIENT_NAME} RUNTIME DESTINATION bin)
INSTALL(TARGETS ${SAS_NAME} LIBRARY DESTINATION lib)