SET(PLUGIN_NAME servald)
SET(PLUGINSRC servald.c client.c crypto.c)
ADD_DEFINITIONS(-DHAVE_BCOPY -DHAVE_BZERO -DHAVE_BCMP -DHAVE_ARPA_INET_H -DHAVE_POLL_H)

INCLUDE_DIRECTORIES(${COMMON_INCLUDES})
INCLUDE_DIRECTORIES("/usr/include/serval")

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)

ADD_LIBRARY(${PLUGIN_NAME} SHARED ${PLUGINSRC})

TARGET_LINK_LIBRARIES(${PLUGIN_NAME} servald)

SET_TARGET_PROPERTIES(${PLUGIN_NAME} PROPERTIES OUTPUT_NAME commotion_${PLUGIN_NAME})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION lib)