SET(PLUGIN_NAME demo)
SET(PLUGINSRC demo.c)

INCLUDE_DIRECTORIES(${COMMON_INCLUDES})

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests/demolibs)

ADD_LIBRARY(${PLUGIN_NAME} SHARED ${PLUGINSRC})

TARGET_LINK_LIBRARIES(${PLUGIN_NAME} commotion)

SET_TARGET_PROPERTIES(${PLUGIN_NAME} PROPERTIES OUTPUT_NAME commotion_${PLUGIN_NAME})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION lib/commotion/plugins)
